--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 Find your train!!!!
+  img(src="https://media.giphy.com/media/8F3bK4aq1tCo0TLkf7/giphy.gif")
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
@@ -11,4 +12,3 @@ block content
       strong  <span id='trainName'></span>
       #trainSchedule
         strong Select a train to view its current schedule.
-  img(src="https://www.sideshow.com/storage/product-images/903314/x-wing-starfighter_star-wars_feature.jpg")
