changed image location

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train!!!!
-  img(src="https://media.giphy.com/media/8F3bK4aq1tCo0TLkf7/giphy.gif")
+  img(src="https://media0.giphy.com/media/onnfUeQK0imVG/source.gif")
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
