--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,8 @@ extends layout
 block content
   h1 Find your train!
   p Select your train below to see its current schedule.
+  
+  p This Website is powered by Docker!
   #wrapper
     #trainList
       h2 Trains
