--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1 Find your train!
   p Select your train below to see its current schedule.
   
-  p This Website is powered by Docker and Jenkins!
+  p This Website is powered by Docker and Jenkins on Dev & Prod environments! 
   #wrapper
     #trainList
       h2 Trains
